Added --add-opens to Maven Surefire plugin execution for XStream support